gdb 	PR python/11060: 	* python/py-type.c (typy_legacy_template_argument): New function, 	extracted from typy_template_argument. 	(typy_template_argument): Use TYPE_TEMPLATE_ARGUMENT.  Return a 	value when needed. gdb/testsuite 	PR python/11060: 	* gdb.python/py-type.c (Temargs): New template. 	(temvar): New variable. 	* gdb.python/py-type.exp (test_template): New proc.